--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,14 +3,24 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
+@ARTICLE{2024AJ....167...12C,
+  abbr={AJ},     
+  author = {Cavallo, L. and Spina, L and Carraro, G. and Magrini, L. and Poggio, E. and Cantat-Gaudin, T. and Pasquato, M. and Lucatello, S. and Ortolani, S. and Schiappacasse-Ulloa, J.},
+  title = "{Parameter Estimation for Open Clusters using an Artificial Neural Network with a QuadTree-based Feature Extractor}",
+  journal = {The Astronomical Journal},
+  year = {2024},
+  month = {Jan},
+  volume = {167},
+  number = {1},
+  pages = {12},
+  doi = {https://10.3847/1538-3881/ad07e5},
+  url = {https://ui.adsabs.harvard.edu/abs/2024AJ....167...12C},
+  html = {https://ui.adsabs.harvard.edu/abs/2024AJ....167...12C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  selected={true}
+  }
+
+
 
 @article{einstein1950meaning,
   abbr={AJP},
@@ -45,40 +55,4 @@
   altmetric={248277},
   dimensions={true},
   selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
 }
