--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,5 @@
 ---
----
-
+----
 @string{aps = {American Physical Society,}}
 
 @ARTICLE{2024AJ....167...12C,
@@ -13,27 +12,12 @@
   volume = {167},
   number = {1},
   pages = {12},
-  doi = {https://10.3847/1538-3881/ad07e5},
-  url = {https://ui.adsabs.harvard.edu/abs/2024AJ....167...12C},
+  doi = {10.3847/1538-3881/ad07e5},
+  url = {https://iopscience.iop.org/article/10.3847/1538-3881/ad07e5},
   html = {https://ui.adsabs.harvard.edu/abs/2024AJ....167...12C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
   selected={true}
   }
-
-
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
 
 @article{PhysRev.47.777,
   abbr={PhysRev},
