--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,24 +19,49 @@
   selected={true}
   }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@ARTICLE{2023MNRAS.522.3529C,
+          abbr= {MNRAS},
+       author = {Cavallo, L. and Greggio, L.},
+        title = "{On the hosts of neutron star mergers in the nearby Universe}",
+      journal = {Monthly Notices of the Royal Astronomical Society},
+         year = {2023},
+        month = {jul},
+       volume = {522},
+       number = {3},
+        pages = {3529-3547},
+          doi = {10.1093/mnras/stad1204},
+         html = {https://ui.adsabs.harvard.edu/abs/2023MNRAS.522.3529C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+     selected = {true} 
+}
+
+@ARTICLE{2023A&A...674A.130C,
+         abbr = {A&A},
+       author = {Cavallo, L. and Cescutti, G. and Matteucci, F.},
+        title = "{Europium enrichment and hierarchical formation of the Galactic halo}",
+      journal = {Astronomy & Astrophysics},
+         year = {2023},
+        month = {jun},
+       volume = {674},
+        pages = {A130},
+          doi = {10.1051/0004-6361/202346412},
+         html = {https://ui.adsabs.harvard.edu/abs/2023A&A...674A.130C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+     selected = {true}
+}
+
+@ARTICLE{2021MNRAS.503....1C,
+         abbr = {MNRAS},
+       author = {Cavallo, L. and Cescutti, G. and Matteucci, F.},
+        title = "{Neutron stars mergers in a stochastic chemical evolution model: impact of time delay distributions}",
+      journal = {Monthly Notices of the Royal Astronomical Society},
+         year = {2021},
+        month = {may},
+       volume = {503},
+       number = {1},
+        pages = {1-12},
+          doi = {10.1093/mnras/stab281},
+         html = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.503....1C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+     selected = {true}
 }
